# advent-of-code-2023

./: .gitignore  aoc2023.opam  dune-project  make_day.clj
descriptions/: day1.md  day2.md  day3.md  day4.md  day5.md  day6.md  day7.md  day8.md
lib/: algos.ml  day1.ml  day2.ml  day3.ml  day4.ml  day5.ml  day6.ml  day7.ml  day8.ml  direction.ml  dune  grid.ml  grid.mli  maps.ml  sets.ml
lib/geom/: dune  position.ml  segment.ml
lib/utils/: dune  funUtils.ml  heap.ml  heap.mli  heaps.ml  intPair.ml  intUtils.ml  listUtils.ml  refUtils.ml  regexUtils.ml  ringBuffer.ml  stringPair.ml  stringUtils.ml  utils.ml
templates/: dayx.ml  test_dayx.ml
test/: dune  test_day1.ml  test_day2.ml  test_day3.ml  test_day4.ml  test_day5.ml  test_day6.ml  test_day7.ml  test_day8.ml  test_grid.ml  test_heap.ml  test_utils.ml
